[project]
name = "tressa_backend"
version = "0.1.0"
description = "Backend for Tressa"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi>=0.115.5",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.1",
    "pydantic[email]>=2.10.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.17",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
]
